--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -17,7 +17,7 @@ a {
 .section {
   display: flex;
   flex: 1;
-  overflow: hidden;
+  overflow: auto;
   background-color: #f2f2f2;
 }
 
@@ -25,9 +25,9 @@ a {
   flex: 0 0 var(--sidebar-width);
   order: -1;
   display: flex;
-  flex: column;
+  flex-direction: column;
   margin: 0;
-  transition: all .3s ease;
+  transition: all 300ms ease;
 }
 
 .sidebar.close {
