--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,5 +1,9 @@
 @global-import 'normalize.css';
 
+:focus {
+  outline: none;
+}
+
 a {
   text-decoration: none;
 }
@@ -8,33 +12,44 @@ a {
   --sidebar-width: 11em;
 }
 
+:global #app {
+  height: 100%;
+}
+
 .root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  min-height: 100%;
+  overflow: hidden;
+
+  :global .nav-text {
+    transition: 0.3s all ease;
+  }
+
+  :global .ant-layout-sider-collapsed {
+    .anticon {
+      font-size: 16px;
+    }
+
+    .nav-text {
+      display: none;
+    }
+  }
 }
 
-.section {
-  display: flex;
-  flex: 1;
-  overflow: auto;
-  background-color: #f2f2f2;
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 16px;
+  cursor: pointer;
+  transition: color 0.3s;
+
+  &:hover {
+    color: #108ee9;
+  }
 }
 
-.sidebar {
-  flex: 0 0 var(--sidebar-width);
-  order: -1;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  transition: all 300ms ease;
-}
-
-.sidebar.close {
-  margin-left: calc(-1 * var(--sidebar-width));
-}
-
-.main {
-  flex: 1;
-  padding: 1em 1em 0;
+.logo {
+  height: 32px;
+  background: #333;
+  border-radius: 6px;
+  margin: 16px;
 }
